<resources>
    <string name="app_name">AnyAgeCare</string>
    <string name="title_home">Home</string>
    <string name="title_appointment">Appointment</string>
    <string name="title_progress">Progress</string>
    <string name="title_emergency">Emergency</string>
    <string name="title_tips">Tips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
