<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/navigation_tips"
        android:icon="@drawable/ic_tips_black_24dp"
        android:title="@string/title_tips" />

    <item
        android:id="@+id/navigation_emergency"
        android:icon="@drawable/ic_emergency_black_24dp"
        android:title="@string/title_emergency" />
    <item
        android:id="@+id/navigation_home"

        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_appointments"
        android:icon="@drawable/ic_appoint_black_24dp"
        android:title="@string/title_appointment" />
    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/ic_progress_24dp"
        android:title="@string/title_progress" />

</menu>
